syntax = "proto3";

option go_package = "./proto;proto";

service FileService {
    rpc UploadFile (stream FileChunk) returns (UploadStatus);
}

message FileChunk {
    string file_name = 1;
    bytes content = 2;
}

message UploadStatus {
    bool success = 1;
    string message = 2;
}
